    Tcl 7.0 libraries.  auto_path is now used instead of TCLPATH.  Several
    commands have been elimiated.  (*POTENTIAL INCOMPATIBILITY*)
  o Deleted the floating-point math functions that are now part of the "expr'
    command.  Supplied procs in tcl.tlib to replace the old commands.
  o Many changes for compabibility with Tcl 7.0.
  o Changed the help facility so that multiple help directories are searched
    to find help files.  This forms a virtual help tree root.
-------------------------------------------------------------------------------
27 Jun 93:
  o Incorporated fix to the profile command that caused it to count upleveled
    CPU time twice.  Patch supplied by Bob Mazanec <mazanec@hci.cirr.com>.
  o Changed for_recursive_glob and recursive_glob to not follow symbolic links.
  o Merged the "showprocs" functionallity into "showproc", they were almost the
    same.  (*POTENTIAL INCOMPATIBILITY*)
  o Changed shell initialization so it doesn't change the prompt hooks if they
    have already be set during startup.
-------------------------------------------------------------------------------
11 Jul 93:
  o Changed random command to use random instead or rand.  Supplied the BSD
    random function in osSupport.
  o Changed "programName" variable to "argv0" for compatibility with Tcl 7.0.
    (*POTENTIAL INCOMPATIBILITY*)
  o Simplified shell startup code, including support for separate master
    directories for TclX and Tk.  Tcl_CommandLoop function is now internal.
    (*POTENTIAL INCOMPATIBILITY for C code*)
  o Changed cindex, crange and csubstr to take expressions starting with a
    magic token "end" or "len" that will be substituted before the expression
    is evaluated.
  o Add kludge to get machines with only the timezone variable to handle
    formating time as GMT correctly.
  o Added our own version of wish main, with programmable prompts, etc.
-------------------------------------------------------------------------------